--- a/puppypals/index.html
+++ b/puppypals/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Debbie King Puppy Pals</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
